2014-10-11 Mark Wibrow <vibrovski@users.sourceforge.net>
	
	- Added provisional code for patterns.meta library. Patterns
        can now be declared using TikZ code with additional support
        for tile transformations. Currently only PDF output supported
	at back-end (uses \pgfsys@declarepattern@meta in pgfsys-pdftex.def).

2014-08-04 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- finished first prototype of a LUA math parser. It is orders of magnitude
	faster than its TeX pendant, features a pure LUA mode and also offers a
	fallback to the TeX \pgfmathparse for unsupported operations/functions
	only defined in TeX.

2014-07-09 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug (regression of bug #229): external lib with dvips produced
	wrong bounding box (was broken entirely)

2014-07-08 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed regression in external lib: 'mode=graphics if exists' broke any
	undefined label warnigns
	- added automatic "fast lane" to math parser: if the input is a number
	without units, it will return that as-is. Reduces typesetting time down to
	66% for huge scatter plots and has just 1% overhead for math intensive
	figures. 

2014-06-22 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- added switch 'trig format=deg|rad' which allows to switch sin,cos,tan,
	and their friends to radians. It works for all user input
	arguments - I hope without unanticipated side-effects (marked as
	experimental)

2014-05-17 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- external lib: defined suitable defaults for 'system call' depending on driver
	- external lib: solved incompatibility with biblatex's \cite[][]{name}
	command	(http://tex.stackexchange.com/questions/173465/tikz-error-for-externalized-graphics-but-output-is-correct}
	- number parser/printer: added switch 'read comma as period' to read