@@ -104,6 +104,25 @@
 	\directlua{pgfluamathfunctions.setRandomSeed(pgfluamathfunctions.tonumber("\pgfmathresult"))}%
 }%
 
+% Patch 'declare function' such that it communicates the function
+% directly to LUA.
+\let\pgfmathnotifynewdeclarefunction@orig=\pgfmathnotifynewdeclarefunction
+\def\pgfmathnotifynewdeclarefunction#1#2#3{%
+	\pgfmathnotifynewdeclarefunction@orig{#1}{#2}{#3}%
+	\directlua{pgfluamathparser.pushLocalExpressionFunction(%
+		"\pgfutil@luaescapestring{#1}",%
+		#2,%
+		"\pgfutil@luaescapestring{#3}")}%
+	%
+	% ensure that the local function is removed at the end of the
+	% scope. To this end, we maintain a stack on the LUA side.
+	\aftergroup\pgfluamathparse@pop@local@function
+}%
+
+\def\pgfluamathparse@pop@local@function{%
+	\directlua{pgfluamathparser.popLocalExpressionFunction()}%
+}%
+
 % End of luatex stuff
 % *******************************************************************
 
@@ -154,6 +173,7 @@
     \pgfluamathcomputationactivefalse
   \fi}
 
+\let\pgfluamath@pgfmathparse\pgfmathparse
 \def\pgfluamath@makeparseractive{%
   \ifpgfluamathparseractive
   \else
