@@ -166,12 +166,20 @@
 			\expandafter\pgfmath@local@function@@body\pgfmath@local@args,,%
 		\fi%
 		\xdef\pgfmath@local@temp{%
-			\noexpand\pgfmathdeclarefunction{\pgfmath@local@name}{\the\c@pgf@counta}%
-				{\noexpand\pgfmathparse{\the\pgfmath@toks}}%
+			\noexpand\pgfmathnotifynewdeclarefunction{\pgfmath@local@name}{\the\c@pgf@counta}%
+				{\the\pgfmath@toks}%
 		}%
 	\endgroup%
 	\pgfmath@local@temp%
 }
+
+% #1: the name
+% #2: the number of arguments <n>
+% #3: a math expression containing '#1', '#2', ... ,'#'<n>
+% This callback is overwritten by pgflibraryluamath.
+\def\pgfmathnotifynewdeclarefunction#1#2#3{%
+	\pgfmathdeclarefunction{#1}{#2}{\pgfmathparse{#3}}%
+}%
 
 \def\pgfmath@local@function@@body#1,{%
 	\def\pgfmath@local@test{#1}%
