@@ -414,6 +414,26 @@ end
 \parsertest{cosec(0.5)}{2.08583}{0}%
 \endgroup
 
+\begingroup
+\pgfkeys{/pgf/declare function={mu1(\x,\i)=\x^\i;}}
+
+\parsertest{mu1(5,2)}{25.0}{0}
+% produces something different in TeX :-(  See docs in LUA
+\parsertest[compare with TeX=false]{mu1(-5,2)}{25.0}{0}
+
+\begingroup
+\pgfkeys{/pgf/declare function={mu2=42;}}
+\parsertest{mu2}{42.0}{0}
+\endgroup
+% should have been clean up:
+\parsertest[show error message=false,compare with TeX=false]{mu2}{}{0}
+% ... but this should NOT have been cleaned up!
+\parsertest{mu1(5,2)}{25.0}{0}
+
+\endgroup
+% should have been clean up:
+\parsertest[show error message=false,compare with TeX=false]{mu1(-5,2)}{}{0}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 % NO MORE TEST CASES HERE!
 
