@@ -1,3 +1,8 @@
+2014-10-11 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+
+	- worked on LUA math parser: ensured that a suitable first scope of
+	functions works. I also added support for 'declare function'
+
 2014-10-11 Mark Wibrow <vibrovski@users.sourceforge.net>
 	
 	- Added provisional code for patterns.meta library. Patterns
